# projectm

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: build_osx_silicon.yml
cmake/: FileToCharArray.cmake  GenerateShaderResourcesScript.cmake  exportheader.cmake.in
doc/: Building.md  Building_CMake.md  Mainpage.md  doxygen-private.cfg.in  doxygen-public.cfg.in
presets/idle/: Geiss & Sperl - Feedback (projectM idle HDR mix).milk  idle_preset.cmake
presets/tests/: 000-empty.milk  001-line.milk  002-square.milk  300-beatdetect-bassmidtreb.milk
presets/tests/effects/composite_shader/: 101-compshader-noise_lq.milk  201-compshader-clouds.milk
presets/tests/effects/custom_shapes/: 101-shapes.milk  102-textured.milk  103-textured-projectm.milk  104-instances.milk
presets/tests/effects/custom_waveforms/: 101-wavecode.milk  102-wavecode-spectrum.milk  103-wavecode-spectrum2.milk
presets/tests/effects/default_waveforms/: 100-wave.milk  101-wave.milk  102-wave.milk  103-wave.milk  104-wave.milk  105-wave.milk  106-wave.milk  107-wave.milk  108-wave.milk  109-wave.milk  110-wave.milk  111-wave.milk  112-wave.milk  113-wave.milk  (+9 more)
src/api/: version.h.in
src/libprojectM/: CMakeLists.txt  PresetFileParser.cpp  PresetFileParser.hpp  ProjectM.cpp  ProjectM.hpp  ProjectMCWrapper.cpp  TimeKeeper.cpp
src/libprojectM/MilkdropPreset/: BlurTexture.hpp  Border.hpp  CMakeLists.txt  Constants.hpp  CustomShape.hpp  MilkdropPreset.cpp  MilkdropShader.cpp  PresetFileParser.cpp  PresetFileParser.hpp  SpectrumBars.cpp  SpectrumBars.hpp  WaveformMode.hpp
src/libprojectM/MilkdropPresetFactory/: CMakeLists.txt  IdlePreset.cpp  IdlePresetResourceBuilder.cmake  IdlePresetResources.h.in
src/libprojectM/Renderer/: CopyTexture.cpp  CopyTexture.hpp  Shape.cpp  TextureManager.cpp  TextureManager.hpp
src/libprojectM/UserSprites/: CMakeLists.txt  MilkdropSprite.cpp  MilkdropSprite.hpp  Sprite.cpp  Sprite.hpp
(+30 files in other folders)
